tests/fail/elaboration/mismatched-array-length/array8.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/mismatched-array-length/array8.fathom:3:1
  │
3 │ [] : Array8 2 U32
  │ ^^ array with invalid length
  │
  = expected length 2
  =    found length 0

'''
